// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button respects block prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-block="block"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Block
    </span>
  </span>
</button>
`;

exports[`Button respects the alignContent prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="start"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Align start
    </span>
  </span>
</button>
`;

exports[`Button respects the large size prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="large"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button respects the small size prop 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="small"
  data-variant="default"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Smol
    </span>
  </span>
</button>
`;

exports[`Button styles danger button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="danger"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Danger
    </span>
  </span>
</button>
`;

exports[`Button styles invisible button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="invisible"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Invisible
    </span>
  </span>
</button>
`;

exports[`Button styles primary button appropriately 1`] = `
<button
  aria-describedby="test-button-loading-announcement"
  class="ButtonBase"
  data-loading="false"
  data-no-visuals="true"
  data-size="medium"
  data-variant="primary"
  id="test-button"
  type="button"
>
  <span
    class="ButtonContent"
    data-align="center"
    data-component="buttonContent"
  >
    <span
      class="Label"
      data-component="text"
    >
      Primary
    </span>
  </span>
</button>
`;
